@@ -7,7 +7,7 @@ if test -n "`grep '^#undef VERSION' config.h.in`"; then
 fi
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(Irssi-SILC, 0.8.2)
+AM_INIT_AUTOMAKE(Irssi-SILC, 0.8.4+)
 
 AM_MAINTAINER_MODE
 
