@@ -44,7 +44,10 @@
     <ul>
     <li>How do I make F1 key do something?</li>
     </ul></li>
-<li><a href="#c10">Proxies and IRC bouncers</a></li>
+<li><a href="#c10">Proxies and IRC bouncers</a>
+    <ul>
+    <li>What's this irssi-proxy?</li>
+    </ul></li>
 <li><a href="#c11">Irssi's settings</a></li>
 <li><a href="#c12">Statusbar</a>
     <ul>
@@ -683,10 +686,10 @@ user's password with /SERVER ADD.</p>
 <strong>--with-proxy</strong> option to configure. You'll still need to run
 irssi in a screen to use it though.</p>
 
-<p>Irssi proxy is a bit different than most proxies, normally proxies create
-a new connection to IRC server when you connect to it, but with irssi proxy
-all the clients use the same IRC server connection (a bit like how screen -x
-works).</p>
+<p>Irssi proxy is a bit different than most proxies, normally proxies
+create a new connection to IRC server when you connect to it, but
+<strong>irssi proxy shares your existing IRC connection(s) to multiple
+clients</strong>.</p>
 
 <p>Irssi proxy supports sharing multiple server connections in different
 ports, like you can share ircnet in port 2777 and efnet in port 2778.</p>
